--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "postinstall": "npm run build",
     "seed:db": "node server/utils/seed.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -58,7 +58,7 @@
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.2",
     "node-sass": "^6.0.1",
-    "passport": "^0.4.0",
+    "passport": "^0.6.0",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-jwt": "^4.0.0",
@@ -100,6 +100,7 @@
     "dotenv-webpack": "^1.8.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^0.7.0",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
