--- a/package.json
+++ b/package.json
@@ -12,7 +12,17 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "postinstall": "npm run build",
     "seed:db": "node server/utils/seed.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
+  },
+  "jest": {
+    "collectCoverage": true,
+    "coverageReporters": [
+      "text",
+      "lcov"
+    ],
+    "collectCoverageFrom": [
+      "server/routes/api/brand.js"
+    ]
   },
   "repository": {
     "type": "git",
@@ -87,9 +97,11 @@
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.21.4",
     "@babel/polyfill": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-env": "^7.21.4",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.21.0",
     "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
     "chalk": "^2.4.2",
@@ -100,6 +112,7 @@
     "dotenv-webpack": "^1.8.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^0.7.0",
     "nodemon": "^1.19.1",
     "npm-run-all": "^4.1.5",
@@ -108,6 +121,7 @@
     "rimraf": "^2.6.3",
     "sass-loader": "^10.2.0",
     "style-loader": "^0.23.1",
+    "supertest": "^6.3.3",
     "terser-webpack-plugin": "^1.3.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
