--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=3000
-MONGO_URI=mongodb+srv://oose2022:oosefall2022@cluster0.mohmp8x.mongodb.net/23testing?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://oose2022:oosefall2022@cluster0.mohmp8x.mongodb.net/23testing_by?retryWrites=true&w=majority
+# MONGO_URI=mongodb://127.0.0.1:27017/test
 JWT_SECRET=agoodpassword
 BASE_CLIENT_URL=http://localhost:8080
 BASE_SERVER_URL=http://localhost:3000
