--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 PORT=3000
-MONGO_URI=mongodb+srv://oose2022:oosefall2022@cluster0.mohmp8x.mongodb.net/23testing?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://oose2022:oosefall2022@cluster0.mohmp8x.mongodb.net/testing_nqt?retryWrites=true&w=majority
 JWT_SECRET=agoodpassword
 BASE_CLIENT_URL=http://localhost:8080
 BASE_SERVER_URL=http://localhost:3000
 BASE_API_URL=api
+
+MAILGUN_KEY=171ea922d3dff807bc9d73bdc0d5a036-181449aa-13f7243c
+MAILGUN_DOMAIN=sandbox947299ac1cdc4c769966157b8a990593.mailgun.org
+MAILGUN_EMAIL_SENDER=noreply@sandbox947299ac1cdc4c769966157b8a990593.mailgun.org
