--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "postinstall": "npm run build",
     "seed:db": "node server/utils/seed.js",
-    "test": "jest --coverage"
+    "test": "jest --forceExit --coverage"
   },
   "jest": {
     "collectCoverage": true,
@@ -21,7 +21,7 @@
       "lcov"
     ],
     "collectCoverageFrom": [
-      "server/routes/api/brand.js"
+      "server/routes/api/address.js"
     ]
   },
   "repository": {
