--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "cross-env": "^5.2.1",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
+    "cypress": "^12.10.0",
     "dotenv-webpack": "^1.8.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
