--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "postinstall": "npm run build",
     "seed:db": "node server/utils/seed.js",
-    "test": "jest --forceExit --coverage"
+    "test": "jest --forceExit --coverage --runInBand"
   },
   "jest": {
     "collectCoverage": true,
