--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 PORT=3000
-MONGO_URI=mongodb+srv://oose2022:oosefall2022@cluster0.mohmp8x.mongodb.net/23testing_test?retryWrites=true&w=majority
-# MONGO_URI=mongodb://127.0.0.1:27017/test
+MONGO_URI=mongodb+srv://oose2022:oosefall2022@cluster0.mohmp8x.mongodb.net/23testing?retryWrites=true&w=majority
+# for UI testing it should be 
+# MONGO_URI=mongodb+srv://oose2022:oosefall2022@cluster0.mohmp8x.mongodb.net/23testing?retryWrites=true&w=majority
+
+# for load testing it should be
+#MONGO_URI=mongodb+srv://oose2022:oosefall2022@cluster0.mohmp8x.mongodb.net/load_testing?retryWrites=true&w=majority
+
 JWT_SECRET=agoodpassword
 BASE_CLIENT_URL=http://localhost:8080
 BASE_SERVER_URL=http://localhost:3000
