--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "cross-env NODE_ENV=production node server/index.js",
     "postinstall": "npm run build",
     "seed:db": "node server/utils/seed.js",
-    "test": "jest --forceExit --coverage --runInBand"
+    "test": "jest --forceExit --coverage"
   },
   "jest": {
     "collectCoverage": true,
@@ -26,7 +26,6 @@
       "server/utils/*.{js,jsx}"
     ],
     "preset": "@shelf/jest-mongodb",
-    "maxWorkers": 1,
     "reporters": [
       "default",
       [
